# nav

./: Cargo.toml  README.md  clippy.toml
examples/: EXAMPLES.md  array_transform.rs
scripts/: print_src.sh
src/: direction.rs  lib.rs  transform.rs
src/transform/: arr2.rs  display.rs  from_str.rs  mod.rs  mul.rs  neg.rs
tests/: direction_categories.rs  direction_opposite.rs  direction_to_from_str.rs  direction_to_from_u8.rs  direction_transform.rs  direction_transform_tests.rs  transform_categories.rs  transform_composition.rs  transform_to_from_str.rs  transform_to_from_u8.rs
