[package]
name = "nav"
version = "0.1.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/FreddyWordingham/nav"
description = "A Rust library for handling cardinal directions and transformations."
keywords = ["direction", "cardinal-directions", "compass", "rotation"]
categories = ["algorithms", "data-structures", "science"]

[features]
default = []
array = ["dep:ndarray"] # Optional feature for ndarray support

[dependencies]
ndarray = { version = "0.16.1", optional = true }
num_enum = "0.7.3"
