[package]
name = "nav"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/FreddyWordingham/nav"
description = "A Rust library for handling cardinal directions and transformations."
keywords = ["direction", "cardinal-directions", "compass", "rotation"]
categories = ["algorithms", "data-structures", "science"]

[features]
default = []
array = ["dep:ndarray"]
serde = ["dep:serde"]

[dependencies]
ndarray = { version = "0.16.1", optional = true }
num_enum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"], optional = true }
